<resources>
    <string name="app_name">Epoint</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="catagory">Catagory</string>
    <string name="setting">Setting</string>
    <string name="about_us">About us!</string>
    <string name="favourites">Favourites</string>
    <string name="solution">Solution:</string>
    <string name="answer">Answer :</string>
    <string name="show_answer">Show answer</string>
    <string name="zero">0</string>
    <string name="rate_us">Rate us</string>
    <string name="user_name_or_email_address">User name or email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="user_name">User name</string>
    <string name="email_address">Email address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
</resources>
