<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/frag_singIn_userImg"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/dark_back"/>

    <EditText android:id="@+id/frag_signIn_userName_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorAccent"
        android:hint="@string/user_name_or_email_address"
        android:layout_margin="10dp"/>

    <EditText android:id="@+id/frag_signIn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorAccent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="10dp"/>

        <TextView android:id="@+id/frag_signIn_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:layout_margin="10dp"/>

        <Button android:id="@+id/frag_signIn_signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
        <TextView android:id="@+id/frag_signIn_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/create_account"/>


    </LinearLayout>

</RelativeLayout>